--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,7 +1,7 @@
 theme = "bulan"
 languageCode = "en-us"
 baseurl = "http://example.com/"
-title = "Bulan Theme Dev"
+title = "@faizmokh"
 
 author = "Faiz Mokhtar"
 copyright = "Copyright © 2019-2023, Faiz Mokhtar, all rights reserved."
