--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "hugo-theme-tailwindcss-starter",
-    "version": "0.4.0",
-    "description": "Starter files for a Hugo theme with Tailwindcss",
+    "name": "bulan",
+    "version": "0.4.1",
+    "description": "Hugo theme",
     "main": "index.js",
-    "repository": "https://github.com/dirkolbrich/hugo-theme-tailwindcss-starter",
-    "author": "dirkolbrich <github@dirkolbrich.de>",
+    "repository": "https://github.com/faizmokh/bulan",
+    "author": "Faiz Mokhtar <mfmokhtar@gmail.com>",
     "license": "MIT",
     "browserslist": [
         "last 1 version",
